@@ -17,6 +17,8 @@ function workflow_tab_page($entity_type, $entity = NULL) {
   // Figure out the $entity's bundle and id.
   list($entity_id, , $entity_bundle) = entity_extract_ids($entity_type, $entity);
   $entity_id = entity_id($entity_type, $entity);
+
+  // @todo: workflow_tab_page(): what to do with multiple workflow_fields per bundle? Use Views instead!
   $workflow = workflow_get_workflows_by_type($entity_bundle, $entity_type);
 
   // Show the current state and the Workflow form to allow state changing.
